--- a/.env
+++ b/.env
@@ -1,2 +1,3 @@
-mongodb_url = "mongodb://localhost:27017/"
+mongodb_url = "mongodb+srv://AlthafHussain:Althaf1699@cluster0.jkirk.mongodb.net/Blogs?retryWrites=true&w=majority&appName=Cluster0
+"
 port = 8000
